<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profile_button"
        android:icon="@drawable/img"
        android:title="@string/item_1_actionbar"
        app:showAsAction="always"/>

    <item
        android:id="@+id/logo"
        android:icon="@drawable/logo_2"
        android:title="@string/item_2_actionbar"
        app:showAsAction="always"/>

    <item
        android:id="@+id/create_group"
        android:title="@string/item_1_menu_settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/configure_challenges"
        android:title="@string/item_2_menu_settings"
        app:showAsAction="never"/>

</menu>
 <!--   <item
        android:id="@+id/leave_group"
        android:title="@string/item_3_menu_settings"
        app:showAsAction="never"/> -->

