<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="nl.tue.besportive.models.ProfileViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".activities.ProfileActivity">

        <include
            android:id="@+id/toolbar_profile_page"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="16dp"
            app:imageUrl="@{viewModel.user.photoUrl}"
            tools:src="@drawable/img"
            android:contentDescription="@string/profile_picture" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.user.email}"
            tools:text="@string/profile_email" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/profile_name_header"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.user.name}"
            android:textSize="20sp"
            tools:text="Username" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/profile_statistics_header"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/total_challenges_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{@string/total_challenges_label(viewModel.user.totalChallenges)}"
            tools:text="@string/total_challenges_label" />

        <TextView
            android:id="@+id/total_time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{@string/total_time_label(viewModel.user.totalTime)}"
            tools:text="@string/total_time_label" />

        <TextView
            android:id="@+id/total_points_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{@string/total_points_label(viewModel.user.totalPoints)}"
            tools:text="@string/total_points_label" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/generate_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/generate_image_button"
            android:onClick="@{() -> viewModel.regenerateProfilePicture()}" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.App.OutlineButton"
            android:text="@string/logout"
            android:onClick="@{() -> viewModel.logout(context)}" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>
</layout>
