<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="nl.tue.besportive.models.ActiveChallengeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:outlineAmbientShadowColor="#FFFFFF"
        tools:context=".activities.ActiveChallengeActivity"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <include
            android:id="@+id/toolbar_active_challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/toolbar" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/activeChallengeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/active_challenge_header"
            android:textColor="#E8000000"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/activeChallengeDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.challenge.name}"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="bold"
            tools:text="100 Push ups" />

        <TextView
            android:id="@+id/challengeDifficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.challenge.smartDifficulty.name}"
            android:textColor="@{viewModel.challenge.smartDifficulty.color}"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Easy"
            tools:textColor="@color/easy_green" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/timerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.timer}"
            android:textColor="#000000"
            android:textSize="78sp"
            android:textStyle="bold"
            tools:text="00:00:00" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6" />

        <Button
            android:id="@+id/take_picture_button"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/take_picture" />

        <Button
            android:id="@+id/complete_button"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/complete" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            style="@style/Widget.App.OutlineButton"
            android:text="@string/cancel_the_challenge" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3" />
    </LinearLayout>
</layout>