<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="nl.tue.besportive.models.CreateGroupViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".activities.CreateGroupActivity">

        <include
            android:id="@+id/toolbar_create_group"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_group_header"
            android:textColor="#E8000000"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:text="@string/create_group_info_text"
            android:textAlignment="center"
            android:layout_marginTop="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:hint="@string/createGroup_inputField_placeholder"
            app:helperText="Required*"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            android:enabled="@{!viewModel.loading}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.name}"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/createGroupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/createGroup_button_text"
            android:visibility="@{viewModel.loading ? View.GONE : View.VISIBLE}"
            android:enabled="@{viewModel.name.length() > 0}"
            android:onClick="@{() -> viewModel.createGroup(context)}" />

        <ProgressBar
            android:id="@+id/createGroupProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" />
    </LinearLayout>
</layout>



