<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="challenge"
            type="nl.tue.besportive.data.Challenge" />

        <variable
            name="listener"
            type="nl.tue.besportive.adapters.ConfigureChallengesAdapter.GroupChallengesAdapter.GroupChallengesAdapterListener" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="0.8"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/card_background_color"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/challenge_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{challenge.name}"
                    tools:text="@string/challenge_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/challenge_difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{challenge.smartDifficulty.name}"
                    tools:text="@string/difficulty"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@{challenge.smartDifficulty.color}"
                    tools:textColor="@android:color/darker_gray" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/trash_icon_button"
            android:layout_width="32dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_trash_red"
            android:onClick="@{() -> listener.onRemove(challenge)}"
            android:contentDescription="@string/trash_icon" />

    </LinearLayout>
</layout>
