<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="nl.tue.besportive.models.JoinCreateGroupViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.JoinCreateGroupActivity">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:contentDescription="logo"
            app:srcCompat="@drawable/logo_2" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="181dp"
            android:layout_height="126dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/join_cartoon"
            android:contentDescription="Shaking hands" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:contentDescription="Join"
            android:fontFamily="sans-serif-black"
            android:text="Join"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:text="@string/joincreategroup_join_info_text"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/codeInputLayout"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:enabled="@{!viewModel.loading}"
            android:hint="@string/joinCreateGroup_code_placeholder"
            app:counterEnabled="true"
            app:counterMaxLength="5"
            app:helperText="Required*">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/codeInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="5"
                android:text="@={viewModel.code}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/joinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:enabled="@{viewModel.code.length() == 5}"
            android:onClick="@{() -> viewModel.joinGroup(context)}"
            android:text="@string/joinCreateGroup_buttons_join"
            android:visibility="@{viewModel.loading ? View.GONE : View.VISIBLE}" />
        <ProgressBar
            android:id="@+id/joinGroupProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:text="Create"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/joincreategroup_create_info_text"
            android:textAlignment="center" />

        <Button
            android:id="@+id/createGroupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:enabled="@{!viewModel.loading}"
            android:onClick="@{() -> viewModel.navigateToCreateGroupActivity(context)}"
            android:text="@string/joinCreateGroup_buttons_create" />

    </LinearLayout>
</layout>
